# python-flask

./: .gitignore  README.md  activate_python_flask.bat  pyproject.toml  runner.py  wsgi.py
flaskapp/: __init__.py  config.py  exc.py  helpers.py
flaskapp/blueprints/: __init__.py
flaskapp/blueprints/admin/: __init__.py  routes.py  validators.py
flaskapp/blueprints/admin/templates/admin/: index.html  user_form.html  users.html
flaskapp/blueprints/auth/: __init__.py  helpers.py  routes.py  validators.py
flaskapp/blueprints/auth/templates/auth/: login.html
flaskapp/blueprints/dashboard/: __init__.py  routes.py
flaskapp/blueprints/dashboard/templates/dashboard/: index.html
flaskapp/blueprints/home/: __init__.py  routes.py
flaskapp/blueprints/home/templates/home/: index.html
flaskapp/database/: __init__.py  dev.sqlite3  literalquery.py  sqlite_contextmanager.py  test.sqlite3
flaskapp/extensions/: __init__.py  flask_uuid.py
flaskapp/models/: __init__.py  helpers.py  models.py
flaskapp/static/: script.js  style.css
flaskapp/templates/error/: 400.html  404.html  405.html  500.html
flaskapp/templates/layouts/: app.html  footer.html  header.html
logs/: README
