[tool.poetry]
name = "applicationName"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flask = "^3.0.2"
sqlalchemy = "^2.0.27"
flask-login = "^0.6.3"
flask-marshmallow = "^1.2.0"
flask-sqlalchemy = "^3.1.1"
marshmallow-sqlalchemy = "^1.0.0"
tzdata = "^2024.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
